Fix portal script bundling for preview

--- a/src/pages/eventos/cumbre-mundial-2026/estado.astro
+++ b/src/pages/eventos/cumbre-mundial-2026/estado.astro
@@ -49,4 +49,6 @@ const { bookingId } = Astro.url.searchParams;
   </div>
 </CumbreLayout>
 
-<script type="module" src="/src/scripts/cumbre-estado.js"></script>
+<script>
+  import '../../../scripts/cumbre-estado.js';
+</script>
